--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "domready": "^1.0.5",
+    "element-class": "^0.1.1",
     "gulp": "^3.7.0",
-    "gulp-autoprefixer": "0.0.7"
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-browserify": "^0.5.0"
   }
 }
