--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "element-class": "^0.1.1",
     "gulp": "^3.7.0",
     "gulp-browserify": "^0.5.0",
-    "gulp-myth": "^0.3.1"
+    "gulp-minify-css": "^0.3.4",
+    "gulp-myth": "^0.3.1",
+    "install": "^0.1.7",
+    "npm": "^1.4.14"
   }
 }
