--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-browserify": "^0.5.0",
     "gulp-minify-css": "^0.3.4",
     "gulp-myth": "^0.3.1",
+    "gulp-uglify": "^0.3.0",
     "install": "^0.1.7",
     "npm": "^1.4.14"
   }
