load animations first when the image of me is loaded

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-browserify": "^0.5.0",
     "gulp-minify-css": "^0.3.4",
     "gulp-myth": "^0.3.1",
-    "gulp-uglify": "^0.3.0"
+    "gulp-uglify": "^0.3.0",
+    "image-loaded": "0.0.2"
   }
 }
