--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts": {
+    "start": "ecstatic",
+    "build": "gulp build",
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "domready": "^1.0.7",
+    "ecstatic": "^1.3.1",
     "gulp": "^3.8.8",
     "gulp-browserify": "^0.5.0",
     "gulp-minify-css": "^0.3.10",
